[gd_scene load_steps=43 format=2]

[ext_resource path="res://Grafik/Assets/Wohnzimmer/living_r.png" type="Texture" id=1]
[ext_resource path="res://Szenen/EG/Blanco.gd" type="Script" id=2]
[ext_resource path="res://Grafik/Assets/Wohnzimmer/lit.png" type="Texture" id=3]
[ext_resource path="res://Grafik/Assets/Wohnzimmer/pfeil_l.png" type="Texture" id=4]
[ext_resource path="res://Szenen/EG/WoZi.gd" type="Script" id=5]
[ext_resource path="res://Szenen/GUI/MainMenuBtn.gd" type="Script" id=6]
[ext_resource path="res://Szenen/EG/page5.tscn" type="PackedScene" id=7]
[ext_resource path="res://Szenen/GUI/BtnMainMenuBg.tscn" type="PackedScene" id=8]
[ext_resource path="res://Grafik/Assets/Wohnzimmer/lit2.png" type="Texture" id=10]
[ext_resource path="res://Szenen/EG/page1.tscn" type="PackedScene" id=11]
[ext_resource path="res://Szenen/EG/page2.tscn" type="PackedScene" id=12]
[ext_resource path="res://Szenen/EG/page3.tscn" type="PackedScene" id=13]
[ext_resource path="res://Szenen/EG/page4.tscn" type="PackedScene" id=14]
[ext_resource path="res://Szenen/EG/page6.tscn" type="PackedScene" id=15]
[ext_resource path="res://Szenen/EG/page7.tscn" type="PackedScene" id=16]
[ext_resource path="res://Szenen/EG/page8.tscn" type="PackedScene" id=17]
[ext_resource path="res://Szenen/EG/page9.tscn" type="PackedScene" id=18]
[ext_resource path="res://Szenen/EG/page10.tscn" type="PackedScene" id=19]
[ext_resource path="res://Szenen/EG/page13.tscn" type="PackedScene" id=20]
[ext_resource path="res://Szenen/EG/page11.tscn" type="PackedScene" id=21]
[ext_resource path="res://Szenen/EG/page15.tscn" type="PackedScene" id=22]
[ext_resource path="res://Szenen/EG/page14.tscn" type="PackedScene" id=23]
[ext_resource path="res://Szenen/EG/page17.tscn" type="PackedScene" id=24]
[ext_resource path="res://Szenen/EG/page16.tscn" type="PackedScene" id=25]
[ext_resource path="res://Szenen/EG/page19.tscn" type="PackedScene" id=26]
[ext_resource path="res://Szenen/EG/page18.tscn" type="PackedScene" id=27]
[ext_resource path="res://Szenen/EG/page20.tscn" type="PackedScene" id=28]
[ext_resource path="res://Szenen/EG/page21.tscn" type="PackedScene" id=29]
[ext_resource path="res://Szenen/EG/page24.tscn" type="PackedScene" id=30]
[ext_resource path="res://Szenen/EG/page25.tscn" type="PackedScene" id=31]
[ext_resource path="res://Szenen/EG/page26.tscn" type="PackedScene" id=32]
[ext_resource path="res://Szenen/EG/page12.tscn" type="PackedScene" id=33]
[ext_resource path="res://Szenen/EG/page23.tscn" type="PackedScene" id=34]
[ext_resource path="res://Szenen/EG/page22.tscn" type="PackedScene" id=35]
[ext_resource path="res://Szenen/EG/pageInhalt.tscn" type="PackedScene" id=36]
[ext_resource path="res://Szenen/EG/page0.tscn" type="PackedScene" id=37]

[sub_resource type="AnimatedTexture" id=1]

[sub_resource type="Animation" id=2]
resource_name = "oeffnen"
length = 2.6
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimationPlayer/Blanco/Links/lpfeil:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2.3, 2.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimationPlayer/Blanco/Rechts/rpfeil:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2.3, 2.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AnimationPlayer/pages:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 2.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("AnimationPlayer/pages:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 2.3, 2.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "vor"
length = 2.4
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("AnimationPlayer/Blanco/Rechts/rpfeil:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1.1, 2.2, 2.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimationPlayer/Blanco/Links/lpfeil:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.1, 2.2, 2.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimationPlayer/blaetter:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1.2, 1.4, 1.6, 1.8, 2, 2.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 22, 23, 24, 25, 26, 27 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AnimationPlayer/blaetter:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 1, 1.2, 2.2, 2.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, true, false ]
}

[sub_resource type="Animation" id=4]
resource_name = "zurueck"
length = 2.4
tracks/0/type = "value"
tracks/0/path = NodePath("AnimationPlayer/Blanco/Links/lpfeil:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1.1, 1.2, 1.9, 2.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimationPlayer/Blanco/Rechts/rpfeil:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.1, 1.2, 1.9, 2.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimationPlayer/blaetter:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.1, 2.2, 2.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AnimationPlayer/blaetter:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 1.1, 1.3, 1.5, 1.7, 1.9, 2.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 27, 26, 25, 24, 23, 22 ]
}

[sub_resource type="DynamicFontData" id=6]
font_path = "res://fonts/Terminal-Grotesque-master/Terminal-Grotesque-master/terminal-grotesque.ttf"

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = SubResource( 6 )

[node name="WoZi" type="Node2D"]
script = ExtResource( 5 )

[node name="living_r" type="Sprite" parent="."]
position = Vector2( 640, 360.124 )
scale = Vector2( 1.33379, 1.33379 )
texture = ExtResource( 1 )
normal_map = SubResource( 1 )
region_rect = Rect2( 0, 0, 721.065, 503.177 )

[node name="lit" type="Sprite" parent="."]
position = Vector2( 644.301, 360.751 )
scale = Vector2( 1.34112, 1.34112 )
texture = ExtResource( 10 )
hframes = 4
vframes = 7
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="lit"]
anims/oeffnen = SubResource( 2 )
anims/vor = SubResource( 3 )
anims/zurueck = SubResource( 4 )

[node name="blaetter" type="Sprite" parent="lit/AnimationPlayer"]
visible = false
position = Vector2( 644, 360 )
scale = Vector2( 1.33, 1.33 )
z_index = 1
texture = ExtResource( 3 )
hframes = 4
vframes = 7
frame = 22

[node name="pages" type="Node2D" parent="lit/AnimationPlayer"]
visible = false

[node name="page0" parent="lit/AnimationPlayer/pages" instance=ExtResource( 37 )]
visible = false

[node name="pageInhalt" parent="lit/AnimationPlayer/pages" instance=ExtResource( 36 )]
visible = false

[node name="page1" parent="lit/AnimationPlayer/pages" instance=ExtResource( 11 )]
visible = false

[node name="page2" parent="lit/AnimationPlayer/pages" instance=ExtResource( 12 )]
visible = false

[node name="page3" parent="lit/AnimationPlayer/pages" instance=ExtResource( 13 )]
visible = false

[node name="page4" parent="lit/AnimationPlayer/pages" instance=ExtResource( 14 )]
visible = false

[node name="page5" parent="lit/AnimationPlayer/pages" instance=ExtResource( 7 )]
visible = false

[node name="page6" parent="lit/AnimationPlayer/pages" instance=ExtResource( 15 )]
visible = false

[node name="page7" parent="lit/AnimationPlayer/pages" instance=ExtResource( 16 )]
visible = false

[node name="page8" parent="lit/AnimationPlayer/pages" instance=ExtResource( 17 )]
visible = false

[node name="page9" parent="lit/AnimationPlayer/pages" instance=ExtResource( 18 )]
visible = false

[node name="page10" parent="lit/AnimationPlayer/pages" instance=ExtResource( 19 )]
visible = false

[node name="page11" parent="lit/AnimationPlayer/pages" instance=ExtResource( 21 )]
visible = false

[node name="page12" parent="lit/AnimationPlayer/pages" instance=ExtResource( 33 )]
visible = false

[node name="page13" parent="lit/AnimationPlayer/pages" instance=ExtResource( 20 )]
visible = false

[node name="page14" parent="lit/AnimationPlayer/pages" instance=ExtResource( 23 )]
visible = false

[node name="page15" parent="lit/AnimationPlayer/pages" instance=ExtResource( 22 )]
visible = false

[node name="page16" parent="lit/AnimationPlayer/pages" instance=ExtResource( 25 )]
visible = false

[node name="page17" parent="lit/AnimationPlayer/pages" instance=ExtResource( 24 )]
visible = false

[node name="page18" parent="lit/AnimationPlayer/pages" instance=ExtResource( 27 )]
visible = false

[node name="page19" parent="lit/AnimationPlayer/pages" instance=ExtResource( 26 )]
visible = false

[node name="page20" parent="lit/AnimationPlayer/pages" instance=ExtResource( 28 )]
visible = false

[node name="page21" parent="lit/AnimationPlayer/pages" instance=ExtResource( 29 )]
visible = false

[node name="page22" parent="lit/AnimationPlayer/pages" instance=ExtResource( 35 )]
visible = false

[node name="page23" parent="lit/AnimationPlayer/pages" instance=ExtResource( 34 )]
visible = false

[node name="page24" parent="lit/AnimationPlayer/pages" instance=ExtResource( 30 )]
visible = false

[node name="page25" parent="lit/AnimationPlayer/pages" instance=ExtResource( 31 )]
visible = false

[node name="page26" parent="lit/AnimationPlayer/pages" instance=ExtResource( 32 )]
visible = false

[node name="Blanco" type="Node2D" parent="lit/AnimationPlayer"]
script = ExtResource( 2 )

[node name="Links" type="Node2D" parent="lit/AnimationPlayer/Blanco"]

[node name="lpfeil" type="TextureRect" parent="lit/AnimationPlayer/Blanco/Links"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 149.544
margin_top = 623.392
margin_right = 199.544
margin_bottom = 655.392
mouse_default_cursor_shape = 2
texture = ExtResource( 4 )

[node name="Rechts" type="Node2D" parent="lit/AnimationPlayer/Blanco"]

[node name="rpfeil" type="TextureRect" parent="lit/AnimationPlayer/Blanco/Rechts"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 1107.28
margin_top = 621.35
margin_right = 1156.28
margin_bottom = 653.35
mouse_default_cursor_shape = 2
texture = ExtResource( 4 )
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Node2D" parent="."]
position = Vector2( 155.48, 784.798 )
script = ExtResource( 6 )

[node name="ButtonMainMenuBg" parent="Button" instance=ExtResource( 8 )]

[node name="Label" type="Label" parent="Button"]
margin_left = -152.0
margin_top = -114.451
margin_right = 152.0
margin_bottom = -71.4511
mouse_default_cursor_shape = 2
custom_colors/font_color = Color( 1, 0.462745, 0.47451, 1 )
custom_fonts/font = SubResource( 5 )
text = "zurück"
align = 1
valign = 1

[connection signal="animation_finished" from="lit/AnimationPlayer" to="lit/AnimationPlayer/Blanco" method="_on_AnimationPlayer_animation_finished"]
[connection signal="gui_input" from="lit/AnimationPlayer/Blanco/Links/lpfeil" to="lit/AnimationPlayer/Blanco" method="_on_lpfeil_gui_input"]
[connection signal="gui_input" from="lit/AnimationPlayer/Blanco/Rechts/rpfeil" to="lit/AnimationPlayer/Blanco" method="_on_rpfeil_gui_input"]
[connection signal="clicked" from="Button/ButtonMainMenuBg" to="." method="_on_ButtonMainMenuBg_clicked"]
